2009-12-09 Chris Allegretta <chrisa@asty.org>
	* files.c (read_file) - Add parameter for whether we should even try to check
	  file writability, as the message is useless when we're inserting into an 
	  existing buffer.  Fixes Savannah bug 28219.

2009-12-07 David Lawrence Ramsey <pooka109@gmail.com>
	* global.c (shortcut_init): Many fixes for keybindings code oversights, including
	  restore page up/down and GotoDir to browser, 
	* browser.c (do_browser): Fix breaking out of a submenu (e.g. gotodir) breaks out
	  of browser altogether.
	* doc/nanorc.sample.in: Add missing entries for fortran/ObjC/OCaml entries.

2009-12-03 David Lawrence Ramsey <pooka109@gmail.com>
	* global.c (shortcut_init) - Remove help shortcut from help shortcut list :-)  Tweaked 
	  to reorder exit shortcut to end of list to not mess up prev/next shortcut symmetry.

2009-12-03 Eitan Adler <eitanadlerlist@gmail.com>
	* doc/syntax/makefile.nanorc - Fix poor regex for all alpha characters which sometimes leads to
	  error messages, reported by gibboris@gmail.com.

2009-12-02 Chris Allegretta <chrisa@asty.org>
	* text.c (add_undo, do_undo, do_redo) - Do not execute cases for SPLIT when DISABLE_WRAPPING
	  is defined.  Fixes Savannah bug 28151 (anon).

2009-12-02 Jordi Mallach <jordi@gnu.org>
	* doc/man/nano.1: Fix escaping of hyphens for the -$ option.

2009-12-01 Kamil Dudka <kdudka@redhat.com>
	* chars.c, file.c - Better handle unused results for things like mbtowc(), new
	  macro IGNORE_CALL_RESULT.

2009-12-01 Chris Allegretta <chrisa@asty.org>
	* global.c (shortcut_init) - Remove redundant entries for ^Y/^V reported by
	  Christian Weisgerber.
	* doc/man/nanorc.5 - Fix typo in Meta documentation, reported by gibboris@gmail.com.

2009-12-01 David Lawrence Ramsey <pooka109@gmail.com>
	* global.c (shortcut_init) - Add support for ^P and ^N in the help menu.
	* Update documentation for 2.2 features including sample nanorc file, texinfo